--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "aws-sdk": "2.433.0",
     "bluebird": "3.5.3",
     "body-parser": "1.18.3",
+    "epsagon": "1.17.0",
     "express": "4.16.4",
     "serverless-http": "1.9.1",
     "uuid": "3.3.2"
